[DEV-17] fix: JWTFilter 위치 수정